# framework

./: LICENSE  README.md  pyproject.toml
pyinert_framework/: __init__.py
pyinert_framework/skeleton/base/: README.md.tmpl  pyproject.toml.tmpl
pyinert_framework/skeleton/base/app/: app.py
pyinert_framework/skeleton/base/app/routes/: about.pi  index.pi
pyinert_framework/skeleton/base/frontend/: register-pwa.js
pyinert_framework/skeleton/base/static/: manifest.webmanifest.tmpl  offline.html.tmpl  sw.js.tmpl
pyinert_framework/skeleton/base/templates/: app.html
pyweave_framework/: __init__.py
pyweave_framework/skeleton/alpine/: package.json  vite.config.js
pyweave_framework/skeleton/alpine/frontend/: app.js
pyweave_framework/skeleton/alpine/templates/: app.html
pyweave_framework/skeleton/base/: README.md.tmpl  pyproject.toml.tmpl
pyweave_framework/skeleton/base/app/: app.py
pyweave_framework/skeleton/base/app/pages/: about.py  index.py
pyweave_framework/skeleton/base/frontend/: register-pwa.js
pyweave_framework/skeleton/base/static/: manifest.webmanifest.tmpl  offline.html.tmpl  pyweave-spa.js  sw.js.tmpl
pyweave_framework/skeleton/base/templates/: app.html
pyweave_framework/skeleton/react/: package.json  vite.config.js
pyweave_framework/skeleton/react/frontend/: app.jsx
pyweave_framework/skeleton/svelte/: package.json  vite.config.js
pyweave_framework/skeleton/svelte/frontend/: app.js
pyweave_framework/skeleton/vue/: package.json  vite.config.js
pyweave_framework/skeleton/vue/frontend/: app.js
(+20 files in other folders)
