[project]
name = "pyinert-framework-app"
version = "0.1.0"
description = "Default application skeleton for PyInert. This repository is copied by pyinert-installer, not published to PyPI."
requires-python = ">=3.10"
dependencies = ["pyinert", "pyinert-spa", "pyinert-pwa"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
